CoqOfSolidity/test/libsolidity/syntaxTests/errors/error_in_interface.v
(* Generated by coq-of-solidity *)
Require CoqOfSolidity.CoqOfSolidity.

(* Interface *)
Module C.
  (* Error E *)
End C.
